fix header spacing again

--- a/mood_boost_fe/src/NavBar/NavBar.css
+++ b/mood_boost_fe/src/NavBar/NavBar.css
@@ -11,7 +11,7 @@ ul {
   display: flex;
   align-items: center;
   background: linear-gradient(0.25turn, #ffb84d, #ff9900, #ff5724, #f44034, #e92063);
-  height: 100px;
+  height: 150px;
   padding: 0 60px;
 }
 
